# AID

./: .env.example  .gitignore  AGENTS.md  BRIEFING_Architektur-Refactoring.md  README.md  demo.py  deploy.sh  dreso.code-workspace  pyproject.toml  streamlit_app.py
app/: __init__.py  graph.py  llm.py  state.py
context/: shared-context.json  shared-context.template.json
docs/: agents.md  architecture.md
prompts/: sprint6_codex.md  sprint6_gemini.md  sprint7_codex.md  sprint7_gemini.md  sprint8a_gemini.md  sprint8b_codex.md  sprint8c_claude.md
schema/: aid-language.json
scripts/: _check_din_cats.py  _check_zone_completeness.py  check_boundary.py  check_coverage.py  check_coverage2.py  check_deltas.py  check_din_cats.py  check_eval.py  check_freif.py  check_pipeline.py  check_pw.py  debug_adjacency_gaps.py  debug_ar_c_site.py  debug_ar_kamm.py  debug_ar_violations.py  debug_b_positions.py  debug_compute.py  debug_envelope.py  debug_envelope_scaling.py  debug_flur.py  debug_flur2.py  debug_flur3.py  debug_flur4.py  debug_flur5.py  debug_flur_overlap.py  debug_gap_exact.py  debug_luecke.py  debug_node_fp.py  debug_nodes.py  debug_parking.py  debug_polygon.py  debug_positions.py  debug_recommendation.py  debug_scores.py  debug_site_boundary.py  debug_support_ar.py  debug_topology.py  debug_vf_zones.py  diag_kamm.py  diag_layout_2d.py  (+34 more)
tests/: conftest.py  test_briefing.py  test_document_library.py  test_drawing.py  test_evaluation.py  test_layout.py  test_legal_docs.py  test_masterplan.py  test_process.py  test_rules.py  test_svg_masterplan.py  test_svg_process.py  (+2 more)
(+61 files in other folders)
