[project]
name = "dreso-industriebau-demo"
version = "0.1.0"
description = "AID Demo – KI-gestützte Prozessautomatisierung im Industriebau"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "shapely>=2.0",
    "python-dotenv>=1.0",
    "rhino3dm>=8.0",
    "requests>=2.28",
    "pyproj>=3.0",
    "plotly>=5.0",
    "langchain-anthropic>=0.1",
    "streamlit-folium>=0.15",
    "ezdxf>=1.1",
    "streamlit-authenticator>=0.3",
    "scipy>=1.11",
    "numpy>=1.26",
    "python-docx>=1.2",
    "pypdf>=6.0",
]

[project.optional-dependencies]
compute = ["compute-rhino3d>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
